--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.5"
+    "astro": "^4.5.5",
+    "@astrojs/tailwind": "^5.1.0",
+    "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
   }
 }
