--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "devTools": "astro preferences disable devToolbar"
   },
   "dependencies": {
     "astro": "^4.5.5",
